AM_CPPFLAGS = -I$(top_srcdir)/Include
LDADD = ../libbicpl.la

noinst_PROGRAMS = \
	test_render \
	test_rgb_io \
	test_volume \
	test_splines \
	test_mapping \
	test_globals \
	test_amoeba \
	test_rotmat \
	test_gradient \
	render_speed \
	test_hash \
	test_filter_speed \
	test_filter_speed2 \
	test_weights \
	test_flatten \
	test_prediction \
	test_prediction_3d \
	test_sphere


