AM_CPPFLAGS = -I$(top_srcdir)/Include

noinst_LTLIBRARIES = libbicpl_t.la
libbicpl_t_la_SOURCES = \
               compute_tps.c \
               compute_xfm.c \
               matrix_basics.c \
               optimize.c \
               procrustes.c \
               rotmat_to_ang.c \
               safe_compute_xfm.c \
               transforms.c \
               transform_io.c

