AM_CFLAGS = -I$(top_srcdir)/Include

noinst_LTLIBRARIES = libbicpl_v.la
libbicpl_v_la_SOURCES = \
              box_filter.c \
              change_labels.c \
              colour_coding.c \
              col_code_points.c \
              col_code_io.c \
              create_slice.c \
              crop_volume.c \
              dilate.c \
              filters.c \
              fill_volume.c \
              interpolate.c \
              input.c \
              labels.c \
              mapping.c \
              output_free.c \
              render.c \
              rend_f.c \
              resample.c \
              scan_lines.c \
              scan_markers.c \
              scan_objects.c \
              scan_polygons.c \
              smooth.c \
              talairach.c

