AM_CPPFLAGS = -I$(top_srcdir)/Include

noinst_LTLIBRARIES = libbicpl_v.la
libbicpl_v_la_SOURCES = \
              box_filter.c \
              change_labels.c \
              colour_coding.c \
              col_code_points.c \
              col_code_io.c \
              create_slice.c \
              crop_volume.c \
              dilate.c \
              filters.c \
              fill_volume.c \
              interpolate.c \
              input.c \
              labels.c \
              mapping.c \
              output_free.c \
              render.c \
              rend_f.c \
              resample.c \
              scan_lines.c \
              scan_markers.c \
              scan_objects.c \
              scan_polygons.c \
              smooth.c \
              talairach.c

# Despite the name ending in '.c', these are #included files!
noinst_HEADERS = \
	call_rend_f_include.c \
	rend_f_include.c \
	render_funcs_include.c \
	render_include.c \
	render_include2.c \
	render_include3.c

