AM_CPPFLAGS = -I$(top_srcdir)/Include

noinst_LTLIBRARIES = libbicpl_cla.la
noinst_HEADERS = \
	blaswrap.h \
	f2c.h

libbicpl_cla_la_SOURCES = \
                dbdsqr.c \
                dcopy.c \
                dgebd2.c \
                dgebrd.c \
                dgelq2.c \
                dgelqf.c \
                dgemm.c \
                dgemv.c \
                dgeqr2.c \
                dgeqrf.c \
                dger.c \
                dgesvd.c \
                dlabrd.c \
                dlacpy.c \
                dlamch.c \
                dlange.c \
                dlapy2.c \
                dlarfb.c \
                dlarf.c \
                dlarfg.c \
                dlarft.c \
                dlartg.c \
                dlas2.c \
                dlascl.c \
                dlaset.c \
                dlasq1.c \
                dlasq2.c \
                dlasq3.c \
                dlasq4.c \
                dlasq5.c \
                dlasq6.c \
                dlasr.c \
                dlasrt.c \
                dlassq.c \
                dlasv2.c \
                dnrm2.c \
                dorg2r.c \
                dorgbr.c \
                dorgl2.c \
                dorglq.c \
                dorgqr.c \
                dorm2r.c \
                dormbr.c \
                dorml2.c \
                dormlq.c \
                dormqr.c \
                drot.c \
                dscal.c \
                d_sign.c \
                dswap.c \
                dtrmm.c \
                dtrmv.c \
                exit_.c \
                F77_aloc.c \
                ieeeck.c \
                ilaenv.c \
                lsame.c \
                pow_dd.c \
                pow_di.c \
                s_cat.c \
                s_cmp.c \
                s_copy.c \
                xerbla.c 
