# We install the main header, bicpl.h into $includedir (${prefix}/include), 
# and the rest of the headers into $pkgincludedir (${prefix}/include/bicpl).  
#
# This allows the library user to code "#include <bicpl.h>", using
# "-I$prefix/include" on the compiler command line.

pkginclude_HEADERS = \
	amoeba.h \
	bintree.h \
	bitlist.h \
	colour_coding.h \
	colours.h \
	compute_xfm.h \
	data_structures.h \
	deform.h \
	deform_prototypes.h \
	ds_prototypes.h \
	geom.h \
	geom_prototypes.h \
	global_lookup.h \
	globals.h \
	hash.h \
	histogram.h \
	image_prototypes.h \
	images.h \
	march_prototypes.h \
	marching.h \
	marching_cubes.h \
	marching_cube_data.h \
	minimization.h \
	numeric_prototypes.h \
	numerical.h \
	obj_defs.h \
	object_prototypes.h \
	objects.h \
	priority_queue.h \
	prog_prototypes.h \
	prog_utils.h \
	queue.h \
	skiplist.h \
	splines.h \
	stack.h \
	statistics.h \
	trans.h \
	trans_prototypes.h \
	vol_prototypes.h \
	vols.h
